--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -311,39 +311,13 @@
   />
   <span>Prueba de FirmaEC</span>
     <div class="spacer"></div>
+    <span class="pi pi-user"></span>
+    <span >{{username}}</span>
+    <p-button severity="help" icon="pi pi-sign-out" (onClick)="cerrarSesion()"></p-button>
+    <span ></span>
 </div>
 
 <div class="content" role="main">
-  <h1>Mi Aplicación Angular con Keycloak</h1>
-
-		<button *ngIf="isLogueado" type="button" (click)="cerrarSesion()">Cerrar Session</button>
-		<button *ngIf="!isLogueado" type="button" (click)="iniciarSesion()">Iniciar Session</button>
-
-		<ng-container *ngIf="perfilUsuario">
-		  <h2>Informacion del Usuario</h2>
-		  <table>
-		    <tr *ngIf="perfilUsuario.username">
-		      <th scope="row">Usuario</th>
-		      <td>{{ perfilUsuario.username }}</td>
-		    </tr>
-		    <tr *ngIf="perfilUsuario.firstName">
-		      <th scope="row">Primer Nombre</th>
-		      <td>{{ perfilUsuario.firstName }}</td>
-		    </tr>
-		    <tr *ngIf="perfilUsuario.lastName">
-		      <th scope="row">Segundo Nombre</th>
-		      <td>{{ perfilUsuario.lastName }}</td>
-		    </tr>
-		    <tr *ngIf="perfilUsuario.email">
-		      <th scope="row">Correo Electronico</th>
-		      <td>{{ perfilUsuario.email }}</td>
-		    </tr>
-		    <tr>
-		      <th scope="row">Correo Verificado</th>
-		      <td>{{ perfilUsuario.emailVerified ? 'Si' : 'No' }}</td>
-		    </tr>
-		  </table>
-		</ng-container>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
