cambio de boton

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,3 +25,7 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
+
+  .common-style {
+    padding-right: 0.5%;
+}
